...
          settingsDrawerInOverview && settingsPrintDarkMode
            ? styles.sidePanelCloseButtonPrintDark
            : null,
        ]}
        testID={
          settingsDrawerInOverview
            ? "close-settings-drawer-button"
            : "settings-drawer-back-button"
        }
      >
        <MaterialCommunityIcons
          name={settingsDrawerInOverview ? "close" : "chevron-left"}
          size={22}
          color={colors.textPrimary}
...
